refactor abstract and introduction

--- a/literature.bib
+++ b/literature.bib
@@ -29,6 +29,15 @@
   publisher={Wiley Online Library}
 }
 
+@inproceedings{dutt1997vlsi,
+  title={VLSI circuit partitioning by cluster-removal using iterative improvement techniques},
+  author={Dutt, Shantanu and Deng, Wenyong},
+  booktitle={Proceedings of the 1996 IEEE/ACM international conference on Computer-aided design},
+  pages={194--200},
+  year={1997},
+  organization={IEEE Computer Society}
+}
+
 @article{zhao2002effective,
   title={{An Effective Algorithm for Multiway Hypergraph Partitioning}},
   author={Zhao, Zhizi and Tao, Lixin and Zhao, Yongchang},
@@ -225,6 +234,49 @@
   pages={80--85},
   year={1998},
   organization={ACM}
+}
+
+@article{liu1998network,
+  title={{Network Flow Based Multi-way Partitioning with Area and Pin Constraints}},
+  author={Liu, Huiqun and Wong, DF},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={17},
+  number={1},
+  pages={50--59},
+  year={1998},
+  publisher={IEEE}
+}
+
+@article{ihler1993modeling,
+  title={{Modeling Hypergraphs by Graphs with the same Mincut Properties}},
+  author={Ihler, Edmund and Wagner, Dorothea and Wagner, Frank},
+  journal={Information Processing Letters},
+  volume={45},
+  number={4},
+  pages={171--175},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{patkar2004efficient,
+  title={{Efficient Network Flow Based Ratio-Cut Netlist Hypergraph Partitioning}},
+  author={Patkar, Sachin B and Sharma, Himanshu and Narayanan, H},
+  journal={WSEAS Transactions on Circuits and Systems},
+  volume={3},
+  number={1},
+  pages={47--53},
+  year={2004}
+}
+
+@article{yang1996balanced,
+  title={{Efficient Network Flow Based Min-Cut Balanced Partitioning}},
+  author={Yang, Hannah Honghua and Wong, DF},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={15},
+  number={12},
+  pages={1533--1540},
+  year={1996},
+  publisher={IEEE}
 }
 
 @article{davis2011university,
