--- a/master_thesis/sections/flow_refinement.tex
+++ b/master_thesis/sections/flow_refinement.tex
@@ -295,7 +295,7 @@ for a maximum $(S,T)$-flow $f$ it holds that $|f| = |f'| = \omega_{H_{V'}}(B_2)$
 \begin{figure}
 \centering
 \includegraphics[width=0.95\textwidth]{../img/source_and_sink_set/delta_proof_illustration.eps}
-\caption{Illustration how to remove a source node $s \in V''$. Note, the green node $s$
+\caption{Illustration how to remove a source node $v \in V''$. Note, the green node $s$
          is the super source of the flow problem. Consequently, all nodes connected to $s$
          are source nodes in the corresponding \emph{multi-source multi-sink} flow problem.}
 \label{img:delta_proof_illustration}
